nová podoba balíčku

--- a/packages/apache/L10n/en/apache_gui_help.xml
+++ b/packages/apache/L10n/en/apache_gui_help.xml
@@ -1,4 +1,4 @@
-<freeconf-gui-label>
+<freeconf_gui_label>
     <title>Configuration of Apache HTTP Server</title>
   <tab name="server-tab">
     <label>Server</label>
@@ -32,4 +32,4 @@
     </section>
   </tab>
 
-</freeconf-gui-label>
+</freeconf_gui_label>
