--- a/packages/sample_package/L10n/en/lists.xml
+++ b/packages/sample_package/L10n/en/lists.xml
@@ -18,4 +18,15 @@
             <help>Fourth value in string list</help>
         </entry>
     </string_list>
+    <fuzzy_list name="fuzzy-list">
+        <entry value="no">
+            <label>No</label>
+        </entry>
+        <entry value="half">
+            <label>Half</label>
+        </entry>
+        <entry value="yes">
+            <label>Yes</label>
+        </entry>
+    </fuzzy_list>
 </freeconf_lists_help>
