--- a/packages/sample_package/L10n/cs/help.xml
+++ b/packages/sample_package/L10n/cs/help.xml
@@ -12,13 +12,12 @@
             </entry>
             <entry name="string1">
                 <label>Text</label>
-                <help>Vícenásobný text. Je nutné zadat alespoň 1 a maximálně 3. Pokud je zadán, nemůže být prázdný.
-                </help>
+                <help>Vícenásobný text. Je nutné zadat alespoň 1 a maximálně 3. Pokud je zadán, nemůže být prázdný.</help>
             </entry>
             <entry name="string11">
                 <label>Text</label>
                 <help>Vstupní pole se seznamem hodnot.
-                    Seznam není povinný, pouze ukozaje možné hodnoty. Lze zadat i jiný vstup než je na seznamu.</help>
+                    Seznam není povinný, pouze ukozaje možné hodnoty. Lze zadat i jiný vstup než je na seznamu. Výstup ve skupině extras.</help>
             </entry>
             <entry name="bool1">
                 <label>Přepínač</label>
@@ -34,33 +33,33 @@
             </entry>
         </container>
         <container name="container2">
-            <label></label>
-            <help></help>
+            <label>Druhý kontejner</label>
+            <help>Druhý kontejner vzorového balíčku.</help>
             <entry name="number2">
-                <label></label>
-                <help></help>
+                <label>Číslo</label>
+                <help>číslo s rozsahem omezeným maximální hodnotou 0.8. S krokem 0.002.</help>
 
             </entry>
             <entry name="string2">
-                <label></label>
-                <help></help>
+                <label>Text</label>
+                <help>Řetezec s výběrem z hodnot. Hodnota je povinná a lze vybrat pouze ze zadaných. Výstup je v skupině extras.</help>
 
             </entry>
             <entry name="fuzzy2">
-                <label></label>
-                <help></help>
+                <label>Fuzzy</label>
+                <help>Fuzzy hodnota. Výstup v extras.</help>
 
             </entry>
             <container name="container3">
-                <label></label>
-                <help></help>
+                <label>Vícenásobný kontejner</label>
+                <help>Možný rozsah: 0-2 kontejnery.</help>
                 <entry name="number3">
-                    <label></label>
-                    <help></help>
+                    <label>Číslo</label>
+                    <help>Bez omezení.</help>
                 </entry>
                 <entry name="string3">
-                    <label></label>
-                    <help></help>
+                    <label>Text</label>
+                    <help>Povinný text bez dalšího omezení</help>
                 </entry>
             </container>
         </container>
