--- a/packages/sample_package/L10n/cs/lists.xml
+++ b/packages/sample_package/L10n/cs/lists.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <freeconf_lists_help>
-    <string_list name="string-list">
+    <list name="string-list">
         <entry value="value1">
             <label>První hodnota</label>
             <help>První hodnota v seznamu string-list</help>
@@ -17,8 +17,8 @@
             <label>Čtvrtá hodnota</label>
             <help>Čtvrtá hodnota v seznamu string-list</help>
         </entry>
-    </string_list>
-    <fuzzy_list name="fuzzy-list">
+    </list>
+    <list name="fuzzy-list">
         <entry value="no">
             <label>Ne</label>
         </entry>
@@ -28,5 +28,5 @@
         <entry value="yes">
             <label>Ano</label>
         </entry>
-    </fuzzy_list>
+    </list>
 </freeconf_lists_help>
