--- a/README
+++ b/README
@@ -2,8 +2,8 @@
                           Freeconf
 
   What is Freeconf?
-  -----------
-    Freeconf is a program for generating text configurations.
+  -----------------
+    Freeconf is a configuration tool for generating text configurations.
     It is developed at the Department of Mathematics at Faculty of Nuclear Sciences and Physical Engineering of the Czech Technical University in Prague.
     Main objective is to simplify and streamline writing configuration files, in synoptic user friendly GUI.
 
@@ -21,11 +21,41 @@
   Licensing
   ---------
 
+    MIT License
+
+    Copyright (c) 2016 Ondřej Lanč
+
+    Permission is hereby granted, free of charge, to any person obtaining a copy
+    of this software and associated documentation files (the "Software"), to deal
+    in the Software without restriction, including without limitation the rights
+    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+    copies of the Software, and to permit persons to whom the Software is
+    furnished to do so, subject to the following conditions:
+
+    The above copyright notice and this permission notice shall be included in all
+    copies or substantial portions of the Software.
+
+    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+    SOFTWARE.
 
 
    Contacts
-  --------
+  ----------
 
-     o Lanč Ondřej - Main Developer
+    Lanč Ondřej - Main Developer
         lancondr@fji.cvut.cz
+
+  Requirements
+  ------------
+      For freeconf is python3 a some libraries, which can be easily install by
+        pip3 install -r requirements
+
+  Run
+  ---
+   python3 freeconf.py
 
